move all html files to root
the previous experiment yield no expected results. now i'm give up and go with the 'rigid' usual procedure

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
   clear: both;
 }
 body {
-  font-family: 'DM Sans', fantasy, sans-serif;
+  font-family: 'DM Sans', sans-serif;
   padding: 0;
   margin: 0;
 }
